--- a/package.json
+++ b/package.json
@@ -1,12 +1,37 @@
 {
-  "name": "KenyanCounties",
-  "version": "1.0.0",
-  "description": "An API listing Kenyan counties",
-  "main": "index.js",
+  "name": "kenyan-counties",
+  "private": true,
+  "version": "0.1.0",
+  "description": "A Strapi application",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "develop": "strapi develop",
+    "start": "strapi start",
+    "build": "strapi build",
+    "strapi": "strapi"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {},
+  "dependencies": {
+    "strapi": "3.3.3",
+    "strapi-admin": "3.3.3",
+    "strapi-utils": "3.3.3",
+    "strapi-plugin-content-type-builder": "3.3.3",
+    "strapi-plugin-content-manager": "3.3.3",
+    "strapi-plugin-users-permissions": "3.3.3",
+    "strapi-plugin-email": "3.3.3",
+    "strapi-plugin-upload": "3.3.3",
+    "strapi-connector-bookshelf": "3.3.3",
+    "knex": "<0.20.0",
+    "sqlite3": "latest"
+  },
+  "author": {
+    "name": "A Strapi developer"
+  },
+  "strapi": {
+    "uuid": "75041da3-cf58-4e42-91ac-1ae3ee7b2f6d"
+  },
+  "engines": {
+    "node": ">=10.16.0 <=14.x.x",
+    "npm": ">=6.0.0"
+  },
+  "license": "MIT"
 }
