--- a/api/county/models/county.settings.json
+++ b/api/county/models/county.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "counties",
   "info": {
-    "name": "county"
+    "name": "county",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,6 +19,10 @@
     },
     "capital": {
       "type": "string"
+    },
+    "sub_counties": {
+      "collection": "sub-county",
+      "via": "county"
     }
   }
 }
